--- a/public/index.html
+++ b/public/index.html
@@ -8,6 +8,8 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="https://bootswatch.com/cyborg/bootstrap.min.css">
+    <link href="https://fonts.googleapis.com/css?family=Creepster" rel="stylesheet">
+    <link rel="stylesheet" href="/stylesheets/style.css">
     <base href="/">
   </head>
   <body>
@@ -32,6 +34,7 @@
       </div><!-- /.container-fluid -->
     </nav>
     <main class="container-fluid">
+      <h1 class="text-center">DEJA VOODOO</h1>
       <ui-view></ui-view>
     </main>
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.1/angular.min.js" charset="utf-8"></script>
