--- a/public/landing/landing.template.html
+++ b/public/landing/landing.template.html
@@ -1,4 +1,15 @@
-<div class="container">
-  <h1 class="text-center">DEJA VOODOO</h1>
-  <img src="" alt="">
+<div>
+  <img src="https://files.slack.com/files-pri/T1T555TL0-F3XN23LKW/voodoo-doll.jpg" alt="">
+</div>
+
+<div class="row">
+  <div class="col-xs-4">
+
+  </div>
+  <button ui-sref="quiz" type="button" class="btn btn-danger btn-lg col-xs-4">
+    Play Game
+  </button>
+  <div class="col-xs-4">
+
+  </div>
 </div>
